New node and test

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm test --if-present
+      # Test requires and router to be readable from github actions. Mine is not
+      # and to tests are done locally on my B525s-23a router
+      # - run: npm test --if-present
 
   publish:
     needs: build
