--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "node-red-contrib-huawei-router",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
-  "main": "huawei-router.js",
   "scripts": {
-    "pretest": "npm install node-red-node-test-helper node-red mocha --no-save",
+    "pretest1": "npm install node-red-node-test-helper node-red mocha --no-save",
     "test": "mocha \"test/**/*.test.js\""
   },
   "author": "zinen",
@@ -16,7 +15,8 @@
   ],
   "node-red": {
     "nodes": {
-      "huawei-router": "huawei-router/huawei-router.js"
+      "huawei-wlanhosts": "huawei-router/huawei-wlanhosts.js",
+      "huawei-lanhosts": "huawei-router/huawei-lanhosts.js"
     }
   },
   "dependencies": {
@@ -30,6 +30,9 @@
     "url": "https://github.com/zinen/node-red-contrib-huawei-router/issues"
   },
   "files": [
-    "huawei-router.html"
-  ]
+    "huawei-router/*"
+  ],
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  }
 }
