--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.3",
   "description": "",
   "scripts": {
-    "pretest1": "npm install node-red-node-test-helper node-red mocha --no-save",
-    "test": "mocha \"test/**/*.test.js\""
+    "pretest": "npm install node-red-node-test-helper node-red mocha --no-save",
+    "test": "mocha \"test/**/*.test.js\" || true",
+    "posttest": "npm uninstall node-red-node-test node-red"
   },
   "author": "zinen",
   "license": "MIT",
