--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-huawei-router",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "scripts": {
     "pretest": "npm install node-red-node-test-helper node-red mocha --no-save",
@@ -17,7 +17,8 @@
   "node-red": {
     "nodes": {
       "huawei-wlanhosts": "huawei-router/huawei-wlanhosts.js",
-      "huawei-lanhosts": "huawei-router/huawei-lanhosts.js"
+      "huawei-lanhosts": "huawei-router/huawei-lanhosts.js",
+      "huawei-signal": "huawei-router/huawei-signal.js"
     }
   },
   "dependencies": {
