feat: toggle mobile data connection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "Dataswitch",
         "homesmart",
         "lanhosts",
+        "mobiledata",
         "wlanhosts"
     ],
     "standard.autoFixOnSave": true
