--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-huawei-router",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
   "scripts": {
     "pretest": "npm install node-red-node-test-helper node-red mocha --no-save",
@@ -12,13 +12,18 @@
   "keywords": [
     "node-red",
     "huawei",
-    "router"
+    "router",
+    "mobile",
+    "data",
+    "signal",
+    "strength"
   ],
   "node-red": {
     "nodes": {
       "huawei-wlanhosts": "huawei-router/huawei-wlanhosts.js",
       "huawei-lanhosts": "huawei-router/huawei-lanhosts.js",
-      "huawei-signal": "huawei-router/huawei-signal.js"
+      "huawei-signal": "huawei-router/huawei-signal.js",
+      "huawei-mobiledata": "huawei-router/huawei-mobiledata.js"
     }
   },
   "dependencies": {
