added send sms node type

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "posttest",
         "wlanhosts"
     ],
-    "standard.autoFixOnSave": true
+    "standard.autoFixOnSave": true,
+    "standard.enable": true
 }
