--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-huawei-router",
-  "version": "1.0.2",
+  "version": "1.1.0a",
   "description": "",
   "scripts": {
     "pretest": "npm install node-red-node-test-helper node-red mocha --no-save",
@@ -16,7 +16,9 @@
     "mobile",
     "data",
     "signal",
-    "strength"
+    "strength",
+    "sms",
+    "text"
   ],
   "node-red": {
     "nodes": {
