--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     }
   },
   "dependencies": {
-    "huawei-lte-api": "0.0.5"
+    "huawei-lte-api": "git+https://github.com/Salamek/huawei-lte-api-ts.git#b69111a"
   },
   "repository": {
     "type": "git",
