--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-huawei-router",
-  "version": "1.1.1d",
+  "version": "1.2.0",
   "description": "",
   "scripts": {
     "pretest": "npm install node-red-node-test-helper node-red mocha --no-save",
@@ -26,7 +26,7 @@
     }
   },
   "dependencies": {
-    "huawei-lte-api": "0.0.10"
+    "huawei-lte-api": "^0.1.1"
   },
   "repository": {
     "type": "git",
