--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-huawei-router",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "",
   "scripts": {
     "pretest": "npm install node-red-node-test-helper node-red mocha --no-save",
@@ -23,7 +23,8 @@
   "node-red": {
     "nodes": {
       "huawei-router": "huawei-router/huawei-router.js"
-    }
+    },
+    "version": ">=1.0.0"
   },
   "dependencies": {
     "huawei-lte-api": "0.0.10"
@@ -36,9 +37,13 @@
     "url": "https://github.com/zinen/node-red-contrib-huawei-router/issues"
   },
   "files": [
-    "huawei-router/*"
+    "huawei-router/*",
+    "examples/"
   ],
   "devDependencies": {
     "dotenv": "^8.6.0"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
