--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "node-red-contrib-huawei-router",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "",
   "scripts": {
-    "pretest": "npm install node-red-node-test-helper node-red mocha --no-save",
+    "xpretest": "npm install node-red-node-test-helper node-red mocha --no-save",
     "test": "mocha \"test/**/*.test.js\"",
-    "posttest": "npm uninstall node-red-node-test node-red"
+    "xposttest": "npm uninstall node-red-node-test node-red"
   },
   "author": "zinen",
   "license": "MIT",
@@ -26,9 +26,6 @@
     },
     "version": ">=1.0.0"
   },
-  "dependencies": {
-    "huawei-lte-api": "0.0.10"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/zinen/node-red-contrib-huawei-router.git"
@@ -45,5 +42,8 @@
   },
   "engines": {
     "node": ">=12.0.0"
+  },
+  "dependencies": {
+    "huawei-lte-api": "^0.1.1"
   }
 }
