--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,7 +3,7 @@ name: NPM Publish
 on:
   # Run on push to the main branch
   push:
-    branches: [ main ]
+    branches: [ main , test-node-version]
   # Run only test part for PRs.
   pull_request:
 
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
       - run: npm ci
       # Test requires and router to be readable from github actions. Mine is not
       # and to tests are done locally on my B525s-23a router
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 16
           registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm publish
