--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 14
-      - run: npm ci
+      - run: npm install
       # Test requires and router to be readable from github actions. Mine is not
       # and to tests are done locally on my B525s-23a router
       # - run: npm test --if-present
