--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
-      - run: npm install
+          node-version: 16
+      - run: npm ci
       # Test requires and router to be readable from github actions. Mine is not
       # and to tests are done locally on my B525s-23a router
       # - run: npm test --if-present
